fixed star dome size

--- a/ShellHacks Project/src/App.css
+++ b/ShellHacks Project/src/App.css
@@ -14,7 +14,7 @@
   height: 100%;
   object-fit: fill;
 }
-/*Someone fix this please */
+/*Fix map repeating*/
 .earth-map {
   width: 518vw;
   height: 518vh;
